recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:6: error: reassignment to val
		length=length+increment
                      ^